--- a/index.html
+++ b/index.html
@@ -166,9 +166,7 @@ Feel the essence of my academic odyssey and explore the evolution of my skills. 
               <img src="./img/vms2.jpeg" alt="vms2" style="width:100%">
             </div>
             <div class="column">
-                <video controls>
-                    <source src="./img/VMS_vdeo.mp4" type="video/mp4">
-                </video>
+                <img src="./img/vms3.jpeg" alt="vms3" style="width:100%">
             </div>
           </div>
         
