--- a/wrks_pres.html
+++ b/wrks_pres.html
@@ -38,8 +38,8 @@
         <table class="tab1" border="1">
             <tr><td>
         <p>Skill Development Training Program - Naandi Foundation and Titan LeAD. 
-            On the 3 days of training, I learnt a lot about Career, Job opportunities, how to introduce, groom ourselves like dressing 💼  and Time
-            and 💰Money Management, 📝Resume Preparation . Also the thinks on G.D and Interview Question are all learnt from the Training.</p>
+            On the 3 days of training, I learnt a lot about Career, Job opportunities, how to introduce, groom ourselves like dressing and Time
+            and Money Management, 📝Resume Preparation . Also the thinks on G.D and Interview Question are all learnt from the Training.</p>
         </td>
         <td><img src="Arun_Resume_1.jpg"> </td>
         <td><img src="Arun_Resume_2.jpg"> </td>
@@ -49,7 +49,7 @@
         <table class="tab1" border="1">
             <tr><td>
         <p> The dynamic 2-day Placement Preparation Programme was conducted by The Indian Institute of Placement.
-             🎓💼 Learned essential skills including Gains LCA formula, ATS optimization, crafting effective resumes, mastering self-introduction techniques, and honing skills at different proficiency levels. </p></td>
+            Learned essential skills including Gains LCA formula, ATS optimization, crafting effective resumes, mastering self-introduction techniques, and honing skills at different proficiency levels. </p></td>
             <td><img src="ARUN_IIP.png"> </td>
             </tr></table>
     </section>
